# pantsagon

./: .gitignore  AGENTS.md  README.md  TYPE_SYSTEM_RULES.md  mkdocs.yml  pants.toml  pyproject.toml  pyrightconfig.json  versions.json
.github/: AGENTS.md  dependabot.yml
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml  docs.yml
dev/: 404.html  index.html  sitemap.xml
dev/cli/: index.html
dev/pack-authoring/: index.html
dev/plugin-authoring/: index.html
dev/search/: search_index.json
docs/: index.md  requirements.txt
docs/cli/: add-service.md  exit-codes.md  index.md  init.md  validate.md
docs/concepts/: architecture.md  diagnostics.md  documentation-contract.md  hexagonal-architecture.md  packs.md  repo-lock.md  trust-and-security.md
docs/contributing/: docs.md  release-checklist-v1.0.0.md
docs/getting-started/: faq.md  generated-repo-tour.md  quickstart.md
docs/pack-authoring/: index.md  pack-format.md  (+3 more)
packs/: BUILD  _index.json
pr-10/: 404.html  index.html  sitemap.xml
pr-4/: 404.html  index.html  requirements.txt  sitemap.xml
pr-5/: 404.html  index.html  sitemap.xml
pr-6/: 404.html  index.html  sitemap.xml
pr-7/: 404.html  index.html  sitemap.xml
pr-8/: 404.html  index.html  sitemap.xml
pr-9/: 404.html  index.html  sitemap.xml
schemas/: pack.schema.v1.json  repo-lock.schema.v1.json
scripts/: __init__.py  generate_diagnostic_codes.py  generate_schema_docs.py
tests/: test_generate_diagnostic_codes.py  test_generate_schema_docs.py  test_pytest_config.py
v1.0.0/: 404.html  index.html  sitemap.xml
(+604 files in other folders)
