[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[project]
name = "pantsagon"
version = "0.1.0"
description = "Hexagonal monorepos, generated with enforcement."
requires-python = ">=3.12"
dependencies = [
  "typer>=0.12",
  "copier>=9.0",
  "pyyaml>=6.0",
  "jsonschema>=4.22",
  "tomli-w>=1.0",
  "rich>=13.7",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]

[project.scripts]
pantsagon = "pantsagon.entrypoints.cli:app"

[tool.pytest.ini_options]
addopts = "-q --import-mode=importlib"
pythonpath = ["services/pantsagon/src", "tools/forbidden_imports/src", "scripts", "."]
asyncio_default_fixture_loop_scope = "function"
